@@ -6,9 +6,13 @@ import java.awt.Cursor;
 import java.util.ArrayList;
 import java.util.List;
 
+import javax.swing.SwingUtilities;
+
 import org.lwjgl.input.Mouse;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+import edu.colorado.phet.common.phetcommon.model.clock.ClockAdapter;
+import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
 import edu.colorado.phet.common.phetcommon.model.event.UpdateListener;
 import edu.colorado.phet.common.phetcommon.model.property.ChangeObserver;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
@@ -36,6 +40,7 @@ import edu.colorado.phet.platetectonics.util.Grid3D;
 import edu.colorado.phet.platetectonics.view.BoxHighlightNode;
 import edu.colorado.phet.platetectonics.view.HandleNode;
 import edu.colorado.phet.platetectonics.view.PlateView;
+import edu.umd.cs.piccolo.nodes.PText;
 
 import static edu.colorado.phet.lwjglphet.math.ImmutableVector2F.X_UNIT;
 import static edu.colorado.phet.lwjglphet.math.ImmutableVector2F.Y_UNIT;
@@ -222,6 +227,36 @@ public class PlateMotionTab extends PlateTectonicsTab {
             isAutoMode.addObserver( visibilityObserver );
         }};
         addGuiNode( timeControlPanelNode );
+
+        final OrthoPiccoloNode timeReadoutNode = new OrthoPiccoloNode( new ControlPanelNode( new PText() {{
+            getClock().addClockListener( new ClockAdapter() {
+                @Override public void simulationTimeChanged( ClockEvent clockEvent ) {
+                    final double time = getClock().getSimulationTime();
+                    SwingUtilities.invokeLater( new Runnable() {
+                        public void run() {
+                            setText( Math.floor( time ) + " Million Years" );
+                            repaint();
+                        }
+                    } );
+                }
+            } );
+            setText( Math.floor( getClock().getSimulationTime() ) + " Million Years" ); // TODO: remove duplication
+        }} ), this, getCanvasTransform(),
+                                                                       new Property<ImmutableVector2D>( new ImmutableVector2D() ), mouseEventNotifier ) {{
+            position.set( new ImmutableVector2D( getStageSize().width - getComponentWidth() - 30,
+                                                 10 ) );
+            updateOnEvent( beforeFrameRender );
+
+            // enable this time control when we can run AND we are in manual mode
+            SimpleObserver visibilityObserver = new SimpleObserver() {
+                public void update() {
+                    setVisible( getPlateMotionModel().hasBothPlates.get() && !isAutoMode.get() );
+                }
+            };
+            getPlateMotionModel().hasBothPlates.addObserver( visibilityObserver );
+            isAutoMode.addObserver( visibilityObserver );
+        }};
+        addGuiNode( timeReadoutNode );
 
         /*---------------------------------------------------------------------------*
         * motion direction chooser
